log
Sat 20 Aug 2022 02:52:55 AM UTC: 
 tests:  0|6
total_score: 0/70
cd1b2d1
Sat 20 Aug 2022 02:53:42 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:30: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |     if(list->current  && list->next){
      |                              ^~
list.c:46:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |     list->current=list->next;
      |                       ^~
Compilation failed
4acd936
Sat 20 Aug 2022 02:54:27 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
1de7889
Sat 20 Aug 2022 02:59:18 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
4631ec3
Sat 20 Aug 2022 03:00:35 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
c7698ca
Sat 20 Aug 2022 03:05:47 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
1ed4558
Sat 20 Aug 2022 03:06:05 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
7ce4f30
Sat 20 Aug 2022 03:22:08 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
13483c8
Sat 20 Aug 2022 03:27:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3dfd1fd
Sat 20 Aug 2022 03:40:05 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
75d5e3c
Sat 20 Aug 2022 03:41:57 AM UTC: 
 list.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  0|0
48ea506
Sat 20 Aug 2022 03:43:37 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:71:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   71 |   if(lista->head){
      |      ^~~~~
      |      list
list.c:71:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c602469
Sat 20 Aug 2022 03:43:46 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a3fbd3d
Sat 20 Aug 2022 03:44:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
85dd3a4
Sat 20 Aug 2022 03:57:32 AM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
cb3aa3a
Sat 20 Aug 2022 03:58:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e4cf234
Sat 20 Aug 2022 04:04:24 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
8a2ee89
Sat 20 Aug 2022 04:14:00 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
7f70795
Sat 20 Aug 2022 04:25:28 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
94f7f86
Sat 20 Aug 2022 04:26:40 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
6e73476
Sat 20 Aug 2022 04:27:26 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
cbca875
Sat 20 Aug 2022 04:30:03 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  11|1
total_score: 55/70
7e7c2d8
Sat 20 Aug 2022 04:30:55 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
d6473af
